--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "precommit": "pretty-quick --staged"
   },
-  "author": "ilker ALTIN",
-  "license": "ISC",
+  "author": "Rohit Panwar",
+  "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
     "axios": "0.20.0",
